--- a/platforms/android/app/src/main/AndroidManifest.xml
+++ b/platforms/android/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
     <application
         android:name="com.weex.app.WXApplication"
         android:allowBackup="false"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/logo_desktop"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
