--- a/platforms/android/app/build.gradle
+++ b/platforms/android/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.taobao.android.weex.plugin.gradle'
 
 android {
     compileSdkVersion project.compileSdkVersion
-    buildToolsVersion project.buildToolsVersion
+    buildToolsVersion '28.0.3'
 
     defaultConfig {
         applicationId "com.weex.app"
